--- a/template/global.properties
+++ b/template/global.properties
@@ -2,4 +2,4 @@
 token.service.access.key=YOUR_SUPER_SECRET_ACCESS_KEY_HERE
 token.service.refresh.key=YOUR_SUPER_SECRET_REFRESH_KEY_HERE
 token.service.access.key.expiration=10m
-token.sezrvice.refresh.key.expiration=7d
+token.service.refresh.key.expiration=7d
