Added device management layer

--- a/src/main/resources/application-cst.properties
+++ b/src/main/resources/application-cst.properties
@@ -1,6 +1,8 @@
 # Token Service Properties
-# You should update these properties
 token.service.access.key=${jwt_access_token}
 token.service.refresh.key=${jwt_refresh_token}
 token.service.access.key.expiration=10m
 token.service.refresh.key.expiration=7d
+
+# Vault Service Properties
+vault.service.enc.dec.key=${vault_enc_dec_key}
