--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<okhttp.version>4.9.1</okhttp.version>
 		<spring-cloud.version>2022.0.2</spring-cloud.version>
 		<testcontainers.version>1.18.0</testcontainers.version>
+		<jmdns.version>3.5.8</jmdns.version>
 	</properties>
 
 	<dependencies>
@@ -70,6 +71,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jmdns</groupId>
+			<artifactId>jmdns</artifactId>
+			<version>${jmdns.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
 			<version>${jsonwebtoken.version}</version>
@@ -81,6 +88,12 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>${jsonwebtoken.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.14.2</version>
 		</dependency>
 
 		<dependency>
@@ -138,7 +151,7 @@
 			<scope>test</scope>
 		</dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
