Did minor clean up and improvements

--- a/src/main/resources/application-cst-dev.properties
+++ b/src/main/resources/application-cst-dev.properties
@@ -7,4 +7,4 @@ token.service.access.key.expiration=10m
 token.service.refresh.key.expiration=7d
 
 # Vault Service Properties
-vault.service.enc.dec.key=NQo2OQ7cWoJ2V3WJ65xZzYwZQQhIGY
+vault.service.enc.dec.key=hZx8=SsqT3K6qr4ykCRUjEpyx@b67!@b
